# FastShip

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  utils.py
backend/app/api/: dependencies.py
backend/app/api/routers/: delivery_partner.py  seller.py  shipment.py
backend/app/api/schemas/: delivery_partner.py  seller.py  shipment.py
backend/app/core/: exceptions.py  security.py
backend/app/database/: models.py  redis.py  session.py
backend/app/services/: base.py  delivery_partner.py  notification.py  seller.py  shipment.py  shipment_event.py  sms.py  user.py
backend/app/templates/: mail_out_for_delivery.html  mail_placed.html
backend/app/tests/: conftest.py  example.py  test_main.py  test_shipment.py
backend/app/worker/: tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 09f70e06ffbc_changed_spelling.py  1fd896be50f8_added_shipment_event_table.py  259fd0b5a1c8_add_review.py  5669dcdafd8b_added_tags.py  6f2b8a4d91e0_baseline_seller_and_shipment_tables.py  8667fcb680e9_added_client_contact.py  8b33918fdba9_added_verification.py  95086a0e6689_add_location_and_servicable_location_.py  b3132919343d_add_delivery_partner_table.py  b88ce9b48c70_change_client_number_type.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: root.tsx  routes.ts
frontend/app/components/: app-sidebar.tsx  forgot-password-form.tsx  login-form.tsx  shipment-card.tsx  shipment-view.tsx  (+2 more)
(+15 files in other folders)
