[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asgiref>=3.11.1",
    "asyncpg>=0.31.0",
    "bcrypt<4.0.0",
    "celery>=5.6.3",
    "fastapi-mail>=1.6.4",
    "fastapi[all]>=0.136.3",
    "flower>=2.0.1",
    "greenlet>=3.5.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "redis[hiredis]>=8.0.0",
    "scalar-fastapi>=1.8.2",
    "sqlmodel>=0.0.38",
    "twilio>=9.10.9",
]
